--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "apollo": "^2.22.1",
     "react": "^16.12.0",
     "react-apollo": "^3.1.3",
+    "react-datepicker": "^2.13.0",
     "react-dom": "^16.12.0",
     "react-instagram-embed": "^1.5.0",
     "react-router": "^5.1.2",
