--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-apollo": "^3.1.3",
     "react-datepicker": "^2.13.0",
     "react-dom": "^16.12.0",
+    "react-dropzone": "^10.2.1",
     "react-instagram-embed": "^1.5.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
